--- a/tb3_domain_bridge/CMakeLists.txt
+++ b/tb3_domain_bridge/CMakeLists.txt
@@ -30,4 +30,8 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
 ament_package()
